--- a/playlist.html
+++ b/playlist.html
@@ -135,19 +135,19 @@
 
 <script>
   const songs = [
-    { name: "Song 1", src: "music/little bit. Sam02 .mp3" },
-    { name: "Song 2", src: "music/sunroof. Nicky .mp3" },
-    { name: "Song 3", src: "music/good things. Sam02 .mp3" },
-    { name: "Song 4", src: "music/intoxicated. Sam02 .mp3" },
-    { name: "Song 5", src: "music/Girl with quiet fire. Dcyberx .mp3" },
-    { name: "Song 6", src: "music/europhia. Sam02.mp3" },
-    { name: "Song 7", src: "music/bittersweet. Sam02.mp3" },
-    { name: "Song 8", src: "music/Intensions. Bieber .mp3" },
-    { name: "Song 9", src: "music/Helplessly. Tatiana .mp3" },
-    { name: "Song 10", src: "music/band4band. Central .mp3" },
-    { name: "Song 11", src: "music/all mine. Sam02 .mp3" },
-    { name: "Song 12", src: "music/Tides. Sam02 .mp3" },
-    { name: "Song 13", src: "music/pretend. Sam 02 .mp3" }
+    { name: "Song 1", src: "music/little bit, Sam02.mp3" },
+    { name: "Song 2", src: "music/sunroof, Nicky.mp3" },
+    { name: "Song 3", src: "music/good things, Sam02.mp3" },
+    { name: "Song 4", src: "music/intoxicated, Sam02.mp3" },
+    { name: "Song 5", src: "music/Girl with quiet fire, Dcyberx.mp3" },
+    { name: "Song 6", src: "music/europhia, Sam02.mp3" },
+    { name: "Song 7", src: "music/bittersweet, Sam02.mp3" },
+    { name: "Song 8", src: "music/Intensions, Bieber.mp3" },
+    { name: "Song 9", src: "music/Helplessly, Tatiana.mp3" },
+    { name: "Song 10", src: "music/band4band, Central.mp3" },
+    { name: "Song 11", src: "music/all mine, Sam02.mp3" },
+    { name: "Song 12", src: "music/Tides, Sam02.mp3" },
+    { name: "Song 13", src: "music/pretend, Sam 02.mp3" }
   ];
 
   let currentSong = 0;
@@ -329,6 +329,7 @@
   </script>
 </body>
 </html>
+
 
 
 
