--- a/playlist.html
+++ b/playlist.html
@@ -135,7 +135,7 @@
 
 <script>
   const songs = [
-    { name: "Song 1", src: "Dcyberx/Dcyberx.github.io/music/ little_bit_Sam02.mp3" },
+    { name: "Song 1", src: "htts://Dcyberx/Dcyberx.github.io/music/ little_bit_Sam02.mp3" },
     { name: "Song 2", src: "music/ sunroof_Nicky.mp3" },
     { name: "Song 3", src: "music/ good_things_Sam02.mp3" },
     { name: "Song 4", src: "music/ intoxicated_Sam02.mp3" },
