--- a/playlist.html
+++ b/playlist.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; media-src 'self' https://dcyberx.github.io; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Updated Content-Security-Policy to allow media loading from GitHub Pages -->
+
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self'; 
     script-src 'self' 'unsafe-inline'; 
     style-src 'self' 'unsafe-inline'; 
     img-src 'self' data:;
-    media-src 'self' https://dcyberx.github.io;
+
     object-src 'none';">
+
   <title>Dcyberx Player</title>
 
   <style>
@@ -134,97 +136,215 @@
     </div>
   </div>
 
-  <script>
-    const songs = [
-      { name: "Song 1", src: "https://dcyberx.github.io/music/little_bit_Sam02.mp3" },
-      { name: "Song 2", src: "https://dcyberx.github.io/music/sunroof_Nicky.mp3" },
-      { name: "Song 3", src: "https://dcyberx.github.io/music/good_things_Sam02.mp3" },
-      { name: "Song 4", src: "https://dcyberx.github.io/music/intoxicated_Sam02.mp3" },
-      { name: "Song 5", src: "https://dcyberx.github.io/music/girl_with_quiet_fire_Dcyberx.mp3" },
-      { name: "Song 6", src: "https://dcyberx.github.io/music/europhia_Sam02.mp3" },
-      { name: "Song 7", src: "https://dcyberx.github.io/music/bittersweet_Sam02.mp3" },
-      { name: "Song 8", src: "https://dcyberx.github.io/music/Intensions_Bieber.mp3" },
-      { name: "Song 9", src: "https://dcyberx.github.io/music/helplessly_Tatiana.mp3" },
-      { name: "Song 10", src: "https://dcyberx.github.io/music/band4band_Central.mp3" },
-      { name: "Song 11", src: "https://dcyberx.github.io/music/all_mine_Sam02.mp3" },
-      { name: "Song 12", src: "https://dcyberx.github.io/music/tides_Sam02.mp3" },
-      { name: "Song 13", src: "https://dcyberx.github.io/music/pretend_Sam 02.mp3" }
-    ];
+<script>
+  const songs = [
+    { name: "Song 1", src: "music/little bit_Sam02.mp3" },
+    { name: "Song 2", src: "music/sunroof_Nicky.mp3" },
+    { name: "Song 3", src: "music/good things_Sam02.mp3" },
+    { name: "Song 4", src: "music/intoxicated_Sam02.mp3" },
+    { name: "Song 5", src: "music/girl with quiet fire_Dcyberx.mp3" },
+    { name: "Song 6", src: "music/europhia_Sam02.mp3" },
+    { name: "Song 7", src: "music/bittersweet_Sam02.mp3" },
+    { name: "Song 8", src: "music/Intensions_Bieber.mp3" },
+    { name: "Song 9", src: "music/helplessly_Tatiana.mp3" },
+    { name: "Song 10", src: "music/band4band_Central.mp3" },
+    { name: "Song 11", src: "music/all mine_Sam02.mp3" },
+    { name: "Song 12", src: "music/tides_Sam02.mp3" },
+    { name: "Song 13", src: "music/pretend_Sam 02.mp3" }
+  ];
 
-    let currentSong = 0;
-    let replayMode = false;
+  let currentSong = 0;
+  let replayMode = false;
 
-    const audio = document.getElementById("music-player");
-    const nowPlaying = document.getElementById("now-playing");
-    const replayBtn = document.getElementById("replayBtn");
-    const bars = document.querySelectorAll(".bar");
+  const audio = document.getElementById("music-player");
+  const nowPlaying = document.getElementById("now-playing");
+  const replayBtn = document.getElementById("replayBtn");
+  const bars = document.querySelectorAll(".bar");
+  
+  function updateNowPlaying() {
+  const totalSongs = songs.length;
+  const songNumber = currentSong + 1;
 
-    function updateNowPlaying() {
-      const totalSongs = songs.length;
-      const songNumber = currentSong + 1;
+  // Get filename from path
+  const filePath = songs[currentSong].src;
+  const fileName = filePath.split("/").pop().replace(".mp3", "");
 
-      // Get filename from path
-      const filePath = songs[currentSong].src;
-      const fileName = filePath.split("/").pop().replace(".mp3", "");
+  // Display: Now Playing: pretend sam 02 (13/13)
+  nowPlaying.textContent = 
+    "Now Playing: " + fileName + "  (" + songNumber + "/" + totalSongs + ")";
+}
 
-      // Display: Now Playing: pretend sam 02 (13/13)
-      nowPlaying.textContent = 
-        "Now Playing: " + fileName + "  (" + songNumber + "/" + totalSongs + ")";
-    }
 
-    function playAudio() {
-      audio.src = songs[currentSong].src;
-      audio.play();
-      updateNowPlaying();
-      animateWaves(true);
-    }
+  function playAudio() {
+    audio.src = songs[currentSong].src;
+    audio.play();
+    updateNowPlaying();
+    animateWaves(true);
+  }
 
-    function pauseAudio() {
-      audio.pause();
-      animateWaves(false);
-    }
+  function pauseAudio() {
+    audio.pause();
+    animateWaves(false);
+  }
 
-    function nextSong() {
-      currentSong = (currentSong + 1) % songs.length;
-      playAudio();
-    }
+  function nextSong() {
+    currentSong = (currentSong + 1) % songs.length;
+    playAudio();
+  }
 
-    function prevSong() {
-      currentSong = (currentSong - 1 + songs.length) % songs.length;
-      playAudio();
-    }
+  function prevSong() {
+    currentSong = (currentSong - 1 + songs.length) % songs.length;
+    playAudio();
+  }
 
-    function shuffleSong() {
-      currentSong = Math.floor(Math.random() * songs.length);
-      playAudio();
-    }
+  function shuffleSong() {
+    currentSong = Math.floor(Math.random() * songs.length);
+    playAudio();
+  }
 
-    function toggleReplaySong() {
-      replayMode = !replayMode;
-      replayBtn.classList.toggle("active", replayMode);
-      audio.loop = replayMode;
-    }
+  function toggleReplaySong() {
+    replayMode = !replayMode;
+    replayBtn.classList.toggle("active", replayMode);
+    audio.loop = replayMode;
+  }
 
-    audio.addEventListener("ended", () => {
-      animateWaves(false);
-      if (!replayMode) nextSong();
+  audio.addEventListener("ended", () => {
+    animateWaves(false);
+    if (!replayMode) nextSong();
+  });
+
+  function animateWaves(isPlaying) {
+    bars.forEach(bar => {
+      bar.style.animationPlayState = isPlaying ? "running" : "paused";
     });
+  }
 
-    function animateWaves(isPlaying) {
-      bars.forEach(bar => {
-        bar.style.animationPlayState = isPlaying ? "running" : "paused";
-      });
-    }
-
-    function downloadSong() {
-      const link = document.createElement("a");
-      link.href = songs[currentSong].src;
-      link.download = songs[currentSong].name + ".mp3";
-      document.body.appendChild(link);
-      link.click();
-      document.body.removeChild(link);
-    }
-  </script>
+  function downloadSong() {
+    const link = document.createElement("a");
+    link.href = songs[currentSong].src;
+    link.download = songs[currentSong].name + ".mp3";
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
+  }
+</script>
 
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-XSS-Protection" content="1; mode=block"> <!-- Enable XSS Protection -->
+  <meta http-equiv="X-Content-Type-Options" content="nosniff"> <!-- Prevent MIME type sniffing -->
+  <meta http-equiv="X-Frame-Options" content="DENY"> <!-- Prevent clickjacking -->
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self'; 
+    script-src 'self'; 
+    style-src 'self' 'unsafe-inline'; 
+    img-src 'self' data:;
+    font-src 'self';
+    object-src 'none';
+    base-uri 'self';">
+  <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload"> <!-- HSTS -->
+  <meta http-equiv="Referrer-Policy" content="no-referrer"> <!-- Referrer Policy -->
+  <title>Secure Website</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #121212; /* Dark background */
+      color: #8ad4ba; /* Light text color */
+      margin: 0;
+      padding: 20px;
+    }
+
+    h1 {
+      color: #8ad4ba;
+    }
+
+    textarea {
+      width: 100%;
+      height: 100px;
+      padding: 10px;
+      margin-bottom: 10px;
+      border-radius: 5px;
+      background-color: #333;
+      color: #8ad4ba;
+      border: 1px solid #555;
+    }
+
+    button {
+      padding: 10px 15px;
+      background-color: #5cb85c;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #4cae4c;
+    }
+
+    #comments {
+      margin-top: 20px;
+    }
+
+    .comment {
+      background-color: #1e1e1e;
+      padding: 15px;
+      border-radius: 5px;
+      margin-bottom: 10px;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    }
+  </style>
+</head>
+<body>
+ 
+
+  
+
+  <script>
+    // Function to sanitize and escape user input
+    function sanitizeInput(input) {
+      const element = document.createElement('div');
+      element.textContent = input; // Escape input by converting it into text content
+      return element.innerHTML; // Returns the HTML-escaped string
+    }
+
+    // Function to generate a CSRF token (Server-side should generate and send this)
+    // This is just an example of what would happen on the server
+    function generateCSRFToken() {
+      return 'secure_random_token'; // Replace with your server-side token generation
+    }
+
+    // Populate the CSRF token in the hidden input
+    document.getElementById("csrfToken").value = generateCSRFToken();
+
+
+      
+      // Sanitize the user input to prevent XSS
+      const sanitizedComment = sanitizeInput(commentText);
+
+      // Create a new div to hold the sanitized comment
+      const commentDiv = document.createElement("div");
+      commentDiv.classList.add("comment");
+      commentDiv.innerHTML = sanitizedComment; // Safely insert sanitized content
+      
+      // Append the sanitized comment to the comments section
+      document.getElementById("comments").appendChild(commentDiv);
+
+      // Clear the textarea after submission
+      document.getElementById("comment").value = '';
+    ;
+  </script>
+</body>
+</html>
+
+
+
+
+
+
