--- a/playlist.html
+++ b/playlist.html
@@ -138,19 +138,18 @@
 
 <script>
   const songs = [
-    { name: "Song 1", src: "music/little bit_Sam02.mp3" },
+    { name: "Song 1", src: "music/little bit sam02" },
     { name: "Song 2", src: "music/sunroof_Nicky.mp3" },
-    { name: "Song 3", src: "music/good things_Sam02.mp3" },
-    { name: "Song 4", src: "music/intoxicated_Sam02.mp3" },
-    { name: "Song 5", src: "music/girl with quiet fire_Dcyberx.mp3" },
-    { name: "Song 6", src: "music/europhia_Sam02.mp3" },
-    { name: "Song 7", src: "music/bittersweet_Sam02.mp3" },
-    { name: "Song 8", src: "music/Intensions_Bieber.mp3" },
-    { name: "Song 9", src: "music/helplessly_Tatiana.mp3" },
-    { name: "Song 10", src: "music/band4band_Central.mp3" },
-    { name: "Song 11", src: "music/all mine_Sam02.mp3" },
-    { name: "Song 12", src: "music/tides_Sam02.mp3" },
-    { name: "Song 13", src: "music/pretend_Sam 02.mp3" }
+    { name: "Song 4", src: "music/intoxicated sam02" },
+    { name: "Song 5", src: "music/Girl with quiet fire Dcyberx" },
+    { name: "Song 6", src: "music/europhia sam02" },
+    { name: "Song 7", src: "music/bittersweet sam02" },
+    { name: "Song 9", src: "music/Helplessly _ Tatiana" },
+    { name: "Song 10", src: "central_cee_ band4band" },
+    { name: "Song 11", src: "music/all mine sam 02" },
+    { name: "Song 12", src: "music/Tides sam02" },
+    { name: "Song 13", src: "music/pretend sam 02" },
+    { name: "Song 14", src: "music/Million Things sam02"}
   ];
 
   let currentSong = 0;
