--- a/playlist.html
+++ b/playlist.html
@@ -109,23 +109,24 @@
     </div>
   </div>
 
-  <!-- 🔹 Scripts -->
-  <script>
-    const songs = [
-      { name: "Song 1", src: "music/little bit sam02.mp3" },
-      { name: "Song 2", src: "music/sunroof Nicky.mp3" },
-      { name: "Song 3", src: "music/good things sam02.mp3" },
-      { name: "Song 4", src: "music/intoxicated sam02.mp3" },
-      { name: "Song 5", src: "music/Girl with quiet fire.mp3" },
-      { name: "Song 6", src: "music/europhia sam02.mp3" },
-      { name: "Song 7", src: "music/bittersweet sam02.mp3" },
-      { name: "Song 8", src: "music/Biber - Intensions.mp3" },
-      { name: "Song 9", src: "music/Helplessly_Tatiana.mp3" },
-      { name: "Song 10", src: "music/central_cee_band4band.mp3" },
-      { name: "Song 11", src: "music/all mine sam02.mp3" },
-      { name: "Song 12", src: "music/Tides sam02.mp3" },
-      { name: "Song 13", src: "music/pretend sam 02.mp3" },
-    ];
+
+<script>
+  const songs = [
+    { name: "Song 1", src: "music/little bit sam02" },
+    { name: "Song 2", src: "music/sunroof_Nicky.mp3" },
+    { name: "Song 4", src: "music/intoxicated sam02" },
+    { name: "Song 5", src: "music/Girl with quiet fire Dcyberx" },
+    { name: "Song 6", src: "music/europhia sam02" },
+    { name: "Song 7", src: "music/bittersweet sam02" },
+    { name: "Song 9", src: "music/Helplessly _ Tatiana" },
+    { name: "Song 10", src: "central_cee_ band4band" },
+    { name: "Song 11", src: "music/all mine sam 02" },
+    { name: "Song 12", src: "music/Tides sam02" },
+    { name: "Song 13", src: "music/pretend sam 02" },
+    { name: "Song 14", src: "music/Million Things sam02"}
+  ];
+
+ 
 
     let currentSong = 0;
     const audio = document.getElementById("music-player");
