--- a/playlist.html
+++ b/playlist.html
@@ -112,18 +112,18 @@
 
 <script>
   const songs = [
-    { name: "Song 1", src: "music/little bit sam02" },
-    { name: "Song 2", src: "music/sunroof_Nicky.mp3" },
-    { name: "Song 4", src: "music/intoxicated sam02" },
-    { name: "Song 5", src: "music/Girl with quiet fire Dcyberx" },
-    { name: "Song 6", src: "music/europhia sam02" },
-    { name: "Song 7", src: "music/bittersweet sam02" },
-    { name: "Song 9", src: "music/Helplessly _ Tatiana" },
-    { name: "Song 10", src: "central_cee_ band4band" },
-    { name: "Song 11", src: "music/all mine sam 02" },
-    { name: "Song 12", src: "music/Tides sam02" },
-    { name: "Song 13", src: "music/pretend sam 02" },
-    { name: "Song 14", src: "music/Million Things sam02"}
+    { name: "Song 1", src: "https://dcyberx.github.io/music/little%20bit%20sam02.mp3" },
+    { name: "Song 2", src: "https://dcyberx.github.io/music/sunroof_Nicky.mp3" },
+    { name: "Song 4", src: "https://dcyberx.github.io/music/intoxicated%20sam02.mp3" },
+    { name: "Song 5", src: "https://dcyberx.github.io/music/Girl%20with%20quiet%20fire%20Dcyberx.mp3" },
+    { name: "Song 6", src: "https://dcyberx.github.io/music/europhia%20sam02.mp3" },
+    { name: "Song 7", src: "https://dcyberx.github.io/music/bittersweet%20sam02.mp3" },
+    { name: "Song 9", src: "https://dcyberx.github.io/music/Helplessly%20%20Tatiana.mp3" },
+    { name: "Song 10", src: "https://dcyberx.github.io/music/central_cee_band4band.mp3" },
+    { name: "Song 11", src: "https://dcyberx.github.io/music/all%20mine%20sam%2002.mp3" },
+    { name: "Song 12", src: "https://dcyberx.github.io/music/Tides%20sam02.mp3" },
+    { name: "Song 13", src: "https://dcyberx.github.io/music/pretend%20sam%2002.mp3" },
+    { name: "Song 14", src: "https://dcyberx.github.io/music/Million%20Things%20sam02.mp3" }
   ];
 
   let currentSong = 0;
