--- a/playlist.html
+++ b/playlist.html
@@ -42,7 +42,7 @@
       cursor: pointer;
       font-family: monospace;
     }
-    button:hover { background: #0a0; color: #fff; }
+    button:hover { background: #0a0; color: #9be0cd; }
 
     #now-playing { margin-top: 15px; font-size: 14px; color: #0f0; }
 
@@ -76,7 +76,7 @@
     /* Replay button active state */
     .active-replay {
       background-color: #f00;
-      color: #fff;
+      color: #9be0cd;
     }
   </style>
 </head>
@@ -113,13 +113,13 @@
 <script>
   const songs = [
     { name: "Song 1", src: "https://dcyberx.github.io/music/little%20bit%20sam02.mp3" },
-    { name: "Song 2", src: "https://dcyberx.github.io/music/sunroof_Nicky.mp3" },
+    { name: "Song 2", src: "https://dcyberx.github.io/music/sunroof%Nicky.mp3" },
     { name: "Song 4", src: "https://dcyberx.github.io/music/intoxicated%20sam02.mp3" },
     { name: "Song 5", src: "https://dcyberx.github.io/music/Girl%20with%20quiet%20fire%20Dcyberx.mp3" },
     { name: "Song 6", src: "https://dcyberx.github.io/music/europhia%20sam02.mp3" },
     { name: "Song 7", src: "https://dcyberx.github.io/music/bittersweet%20sam02.mp3" },
     { name: "Song 9", src: "https://dcyberx.github.io/music/Helplessly%20%20Tatiana.mp3" },
-    { name: "Song 10", src: "https://dcyberx.github.io/music/central_cee_band4band.mp3" },
+    { name: "Song 10", src: "https://dcyberx.github.io/music/central%cee%band4band.mp3" },
     { name: "Song 11", src: "https://dcyberx.github.io/music/all%20mine%20sam%2002.mp3" },
     { name: "Song 12", src: "https://dcyberx.github.io/music/Tides%20sam02.mp3" },
     { name: "Song 13", src: "https://dcyberx.github.io/music/pretend%20sam%2002.mp3" },
@@ -200,3 +200,4 @@
 
 </body>
 </html>
+
