--- a/playlist.html
+++ b/playlist.html
@@ -113,18 +113,18 @@
 <script>
   // Updated song paths for GitHub Pages
   const songs = [
-    { name: "Song 1", src: "https://dcyberx.github.io/music/little%20bit%20sam02.mp3" },
-    { name: "Song 2", src: "https://dcyberx.github.io/music/sunroof_Nicky.mp3" },
-    { name: "Song 4", src: "https://dcyberx.github.io/music/intoxicated%20sam02.mp3" },
-    { name: "Song 5", src: "https://dcyberx.github.io/music/Girl%20with%20quiet%20fire%20Dcyberx.mp3" },
-    { name: "Song 6", src: "https://dcyberx.github.io/music/europhia%20sam02.mp3" },
-    { name: "Song 7", src: "https://dcyberx.github.io/music/bittersweet%20sam02.mp3" },
-    { name: "Song 8", src: "https://dcyberx.github.io/music/Helplessly%20Tatiana.mp3" },
-    { name: "Song 9", src: "https://dcyberx.github.io/music/central_cee%20band4band.mp3" },
-    { name: "Song 10", src: "https://dcyberx.github.io/music/all%20mine%20sam%2002.mp3" },
-    { name: "Song 11", src: "https://dcyberx.github.io/music/Tides%20sam02.mp3" },
-    { name: "Song 12", src: "https://dcyberx.github.io/music/pretend%20sam%2002.mp3" },
-    { name: "Song 13", src: "https://dcyberx.github.io/music/Million%20Things%20sam02.mp3" }
+    { name: "little bit sam02", src: "https://dcyberx.github.io/music/little%20bit%20sam02.mp3" },
+    { name: "sunroof Nicky", src: "https://dcyberx.github.io/music/sunroof_Nicky.mp3" },
+    { name: "intoxicated sam02", src: "https://dcyberx.github.io/music/intoxicated%20sam02.mp3" },
+    { name: "Girl with quiet fire Dcyberx", src: "https://dcyberx.github.io/music/Girl%20with%20quiet%20fire%20Dcyberx.mp3" },
+    { name: "europhia sam02", src: "https://dcyberx.github.io/music/europhia%20sam02.mp3" },
+    { name: "bittersweet sam02", src: "https://dcyberx.github.io/music/bittersweet%20sam02.mp3" },
+    { name: "Helplessly Tatiana", src: "https://dcyberx.github.io/music/Helplessly%20Tatiana.mp3" },
+    { name: "central_cee_band4band", src: "https://dcyberx.github.io/music/central_cee%20band4band.mp3" },
+    { name: "all mine sam 02", src: "https://dcyberx.github.io/music/all%20mine%20sam%2002.mp3" },
+    { name: "Tides sam02", src: "https://dcyberx.github.io/music/Tides%20sam02.mp3" },
+    { name: "pretend sam 02", src: "https://dcyberx.github.io/music/pretend%20sam%2002.mp3" },
+    { name: "Million Things sam02", src: "https://dcyberx.github.io/music/Million%20Things%20sam02.mp3" }
   ];
 
   let currentSong = 0;
