--- a/playlist.html
+++ b/playlist.html
@@ -137,17 +137,17 @@
   const songs = [
     { name: "Song 1", src: "music/littlebit.mp3" },
     { name: "Song 2", src: "music/sunroof.mp3" },
-    { name: "Song 3", src: "music/goodthings.mp3" },
-    { name: "Song 4", src: "music/intoxicated.mp3" },
-    { name: "Song 5", src: "music/girlwithquitefire.mp3" },
-    { name: "Song 6", src: "music/europhia.mp3" },
-    { name: "Song 7", src: "music/bittersweet.mp3" },
-    { name: "Song 8", src: "music/Intensions.mp3" },
-    { name: "Song 9", src: "music/helplessly.mp3" },
-    { name: "Song 10", src: "music/band4band.mp3" },
-    { name: "Song 11", src: "music/all mine.mp3" },
+    { name: "Song 3", src: "music/pretend.mp3" },
+    { name: "Song 4", src: "music/bitterseet.mp3" },
+    { name: "Song 5", src: "music/europhia.mp3" },
+    { name: "Song 6", src: "music/girlwiththequietfire-Dcyberx.mp3" },
+    { name: "Song 7", src: "music/goodthings.mp3" },
+    { name: "Song 8", src: "music/helplessly.mp3" },
+    { name: "Song 9", src: "music/intentions.mp3" },
+    { name: "Song 10", src: "music/intoxinated.mp3" },
+    { name: "Somg 11", src: "music/allmine.mp3" },
     { name: "Song 12", src: "music/tides.mp3" },
-    { name: "Song 13", src: "music/pretend.mp3" }
+    { name: "Song 13", src: "music/band4band.mp3" }
   ];
 
   let currentSong = 0;
