--- a/playlist.html
+++ b/playlist.html
@@ -135,20 +135,20 @@
 
 <script>
   const songs = [
-    { name: "Song 1", src: "music/littlebit.mp3" },
-    { name: "Song 2", src: "music/sunroof.mp3" },
-    { name: "Song 3", src: "music/pretend.mp3" },
-    { name: "Song 4", src: "music/ordinary.mp3" },
-    { name: "Song 5", src: "music/europhia.mp3" },
-    { name: "Song 6", src: "music/girlwiththequietfire-Dcyberx.mp3" },
-    { name: "Song 7", src: "music/goodthings.mp3" },
-    { name: "Song 8", src: "music/helplessly.mp3" },
-    { name: "Song 9", src: "music/intentions.mp3" },
-    { name: "Song 10", src: "music/intoxinated.mp3" },
-    { name: "Song 11", src: "music/allmine.mp3" },
-    { name: "Song 12", src: "music/tides.mp3" },
-    { name: "Song 13", src: "music/band4band.mp3" },
-    { name: "Song 14", src: "music/bittersweet" }
+    { name: "Song 1", src: "assets/audio/littlebit.mp3" },
+    { name: "Song 2", src: "assets/audio/sunroof.mp3" },
+    { name: "Song 3", src: "assets/audio/pretend.mp3" },
+    { name: "Song 4", src: "assets/audio/ordinary.mp3" },
+    { name: "Song 5", src: "assets/audio/europhia.mp3" },
+    { name: "Song 6", src: "assets/audio/girlwiththequietfire-Dcyberx.mp3" },
+    { name: "Song 7", src: "assets/audio/goodthings.mp3" },
+    { name: "Song 8", src: "assets/audio/helplessly.mp3" },
+    { name: "Song 9", src: "assets/audio/intentions.mp3" },
+    { name: "Song 10", src: "assets/audio/intoxinated.mp3" },
+    { name: "Song 11", src: "assets/audio/allmine.mp3" },
+    { name: "Song 12", src: "assets/audio/tides.mp3" },
+    { name: "Song 13", src: "assets/audio/band4band.mp3" },
+    { name: "Song 14", src: "assets/audio/bittersweet" }
   ];
 
   let currentSong = 0;
