--- a/playlist.html
+++ b/playlist.html
@@ -140,15 +140,7 @@
     { name: "Song 3", src: "assets/audio/pretend.mp3" },
     { name: "Song 4", src: "assets/audio/ordinary.mp3" },
     { name: "Song 5", src: "assets/audio/europhia.mp3" },
-    { name: "Song 6", src: "assets/audio/girlwiththequietfire-Dcyberx.mp3" },
-    { name: "Song 7", src: "assets/audio/goodthings.mp3" },
-    { name: "Song 8", src: "assets/audio/helplessly.mp3" },
-    { name: "Song 9", src: "assets/audio/intentions.mp3" },
-    { name: "Song 10", src: "assets/audio/intoxinated.mp3" },
-    { name: "Song 11", src: "assets/audio/allmine.mp3" },
-    { name: "Song 12", src: "assets/audio/tides.mp3" },
-    { name: "Song 13", src: "assets/audio/band4band.mp3" },
-    { name: "Song 14", src: "assets/audio/bittersweet" }
+    { name: "Song 6", src: "assets/audio/girlwiththequietfire-Dcyberx.mp3" }
   ];
 
   let currentSong = 0;
