--- a/subscription.html
+++ b/subscription.html
@@ -128,7 +128,7 @@
   <div class="section"></div>
     <h2>🚫 Rules and regulations</h2>
     <p>Impersonating is highly breach and leads to burn or termination.
-    <p>Avoidig plagiarism (cheatig) is the best for one's gain.
+    <p>Avoiding plagiarism / cheating is the best for one's gain.
     <p>Uploading sexually explicit images and illeagal activities is not accepted.
 
   <div class="section">
