--- a/subscription.html
+++ b/subscription.html
@@ -92,13 +92,13 @@
       </tr>
       <tr>
         <td>Weekly Pass</td>
-        <td>7 Days</td>
+        <td>5 Days</td>
         <td>50,000 UGX</td>
         <td>10% discount for the first 10 qualifiers</td>
       </tr>
       <tr>
         <td>Monthly Pass</td>
-        <td>30 Days</td>
+        <td>20-23 Days</td>
         <td>200,000 UGX</td>
         <td>10% discount for the first 10 qualifiers</td>
       </tr>
