--- a/copyright.html
+++ b/copyright.html
@@ -58,6 +58,7 @@
   <div class="section">
     <h2>🚫 Violations</h2>
     <p>Any scaming, unauthorised root access, phishing or any other illegal acitivity on this site is highly unacceptable and immediate action will be enforced.</p>
+    <p> This is undertaken for the best of service between the User, Dcyberx  and CyberTech site efficiency. as in the <a href="https://Dcyberx.github.io/privacy policy.html" </p>
   </div>
 </body>
 </html>
