--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
   <p>Where code meets innovation.</p>
   <br>
         
-              <P> 🚧 This website is still under development by Dcyberx. Interaction is okay. </P>
+              <P>🚧 This website is still under development by Dcyberx.Interaction is okay. </P>
+              <p>⌛ For now it works perfect on laptops and desktops, on other devices, coming soon. <p>
               <p>⚠️ payments and subsription are still under arrangement, donot be scammed by anyone.<p>
 <br>
 </main>
