--- a/playlist.html
+++ b/playlist.html
@@ -139,7 +139,8 @@
     { name: "Pretend- Sam02", src: "assets/audio/pretend.mp3" },
     { name: "Ordinary- Alex Warren", src: "assets/audio/ordinary.mp3" },
     { name: "Sunroof- Nicky Youre", src: "assets/audio/sunroof.mp3" },
-    { name: "little bit- Sam02", src: "assets/audio/littlebit.mp3" }
+    { name: "little bit- Sam02", src: "assets/audio/littlebit.mp3" },
+    { name: "akalimu- Bobi", src: "assets/audio/akalimu.mp3" }
   ];
 
   let currentSong = 0;
