--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <div class="dropdown">
       <div class="dropdown-btn">Socials</div>
       <div class="dropdown-content">
-        <a href="https://www.instagram.com/dcyberx.1" target="_blank"> <img src ="insta.png", Instagram</a>
+        <a href="https://www.instagram.com/dcyberx.1" target="_blank">Instagram</a>
         <a href="https://github.com/Dcyberx" target="_blank">GitHub</a>
         <a href="https://discord.gg/833GaF3R" target="_blank">CyberTech Discord</a>
         <a href="mailto:Dcyberx@proton.me">email</a>
