--- a/subscription.html
+++ b/subscription.html
@@ -97,7 +97,7 @@
         <td>10% discount for the first 10 qualifiers</td>
       </tr>
       <tr>
-        <td>Monthly Pass</td>
+        <td>≈ Monthly Pass</td>
         <td>20-23 Days</td>
         <td>200,000 UGX</td>
         <td>10% discount for the first 10 qualifiers</td>
