--- a/subscription.html
+++ b/subscription.html
@@ -114,8 +114,12 @@
     <h2>📦 What You Get</h2>
     <p>Subscribers gain access to:</p>
     <ul>
-      <li>Online and physical training in computer basics, graphic design, CAD, Linux, and Python.</li>
-      <li>DIY architecture and compound design consultations.</li>
+      <li>Online and physical training in computer basics, graphic design, CAD, Linux, Python, etc.</li>
+      <li>Hands-on simulations  and projects.</li>
+      <li>Access to a community forum for peer support.</li>
+      <li>Free consultations and discussions.</li>
+      <li>DIY architecture and compound designing by Dcyberx.
+        - You  contact me , i come and desighn your imagination for the best.</li>
       <li>Exclusive updates.</li>
     </ul>
   </div>
@@ -127,9 +131,9 @@
 
   <div class="section"></div>
     <h2>🚫 Rules and regulations</h2>
-    <p>Impersonating is highly breach and leads to burn or termination.
-    <p>Avoiding plagiarism / cheating is the best for one's gain.
-    <p>Uploading sexually explicit images and illeagal activities is not accepted.
+    <p>-Impersonating is highly breach and leads to burn or termination.
+    <p>-Avoiding plagiarism / cheating is the best for one's gain.
+    <p>-Uploading sexually explicit images and illeagal activities is not accepted.
 
   <div class="section">
     <h2>❌ Cancellation & Termination</h2>
