--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       <div class="dropdown-content">
         <a href="https://www.instagram.com/dcyberx.1" target="_blank">Instagram</a>
         <a href="https://github.com/Dcyberx" target="_blank">GitHub</a>
-        <a href="https://discord.gg/833GaF3R" target="_blank">CyberTech Discord</a>
+        <a href="https://discord.gg/FyJYcpaS" target="_blank">CyberTech Discord</a>
         <a href="mailto:Dcyberx@proton.me">email</a>
       </div>
     </div>
