--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
       <div class="dropdown-btn">More</div>
       <div class="dropdown-content">
         <a href="playlist.html">Playlist</a>
+        <a href="motivation.html">Motivation</a>
       </div>
     </div>
 
