--- a/motivation.html
+++ b/motivation.html
@@ -86,6 +86,7 @@
         <p>If you fell valueless or taken valueless, alwyas change position, gold cannot be used as food</p>
         <p>Always follow your best talent, success is passion.</p>
         <p>No need for proving wealth, power, authority and intelligence, character is always the indicator, intelligent and powerful are those who treat there subjects well without using authoruty and power </p>
+        <p>Live the real you, love will always search and find the diffrence in you.</p>
         <p>Always defend and withstand your mental perspective</p>
     </p>
   </div>
